Changed opactiy and layout issues

--- a/hcs-style.css
+++ b/hcs-style.css
@@ -86,12 +86,14 @@ font-size: 16pt;
 }
 .right-aside-image{
 	width: 700px;
-	margin-right: 25px;
+	margin-left: -60px;
 	float: left;
+	z-index: 100;
 	
 	}
 
 .right-aside-text{
+	opacity: 0.7;
 	margin-right: 50px;
 	background-color: #014da5; 
 	border-radius: 15px 50px;
@@ -101,13 +103,15 @@ font-size: 16pt;
 	color: white;
 }
 .left-aside-text{
+	opacity: 0.7;
 	margin-left: 50px;
 	background-color: #014da5; 
 	border-radius: 15px 50px;
-	padding: 25px;
+	padding-left: 25px;
 	float: left;	
 	text-align: center;
 	color: white;
+	z-index: 1000;
 }
 
 .opacity{
